--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.2.0",
-        "alpinejs": "^3.15.8"
+        "alpinejs": "^3.15.8",
+        "chart.js": "^4.5.1"
     }
 }
